BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Data_Change_Request_Line_vod__c.object
<CustomObject>
    <description>Data change request line.</description>
    <fields>
        <fullName>Country_Mapping_BMS_SHARED__c</fullName>
        <description>VPRO MEA Nov-2015: created to use in sharing rules (model is Private + sharing rules)</description>
        <label>Country Mapping</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_BMS_EMEA__c</fullName>
        <description>BMS ACN - June 2016: Field to display the Created Date without the Time Stamp. Created as part of the DCR OOB Project.</description>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Change_Request_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>DCR line parent request.</description>
        <label>Data Change Request</label>
        <referenceTo>Data_Change_Request_vod__c</referenceTo>
        <relationshipLabel>Data Change Request Lines</relationshipLabel>
        <relationshipName>Data_Change_Request_Lines_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_vod__c</fullName>
        <description>Details of any errors that occurred during outbound DCR requests to Veeva Network, or inbound DCR updates from Veeva Network. Errors are cleared after DCR is successfully processed.</description>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Field_API_Name_vod__c</fullName>
        <description>Field API name in Customer Master</description>
        <label>External Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name_vod__c</fullName>
        <description>Field API name in CRM</description>
        <label>Field API Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name_vod__c</fullName>
        <description>Name of modified field</description>
        <label>Field Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Localized_Value_vod__c</fullName>
        <description>The final localized/translated value of the field, after the DCR result is returned from the Customer Master</description>
        <label>Final Value (Localized)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Value_vod__c</fullName>
        <description>Field value after Network validation.</description>
        <label>Final Value</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Time the record was created on mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Last time modified on a mobile device</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Localized_Value_vod__c</fullName>
        <description>The localized/translated modified value of the field, as requested by the end user</description>
        <label>New Value (Localized)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Value_vod__c</fullName>
        <description>Field value after user update.</description>
        <label>New Value</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Localized_Value_vod__c</fullName>
        <description>The localized/translated value of the field, before the change</description>
        <label>Old Value (Localized)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value_vod__c</fullName>
        <description>Old field value</description>
        <label>Old Value</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Note_vod__c</fullName>
        <description>Notes returned from Veeva Network</description>
        <label>Resolution Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result_vod__c</fullName>
        <description>Line result returned from Customer Master.</description>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>CHANGE_ACCEPTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_REJECTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_MODIFIED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGE_ALREADYAPPLIED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Change Request Line</label>
    <nameField>
        <displayFormat>DCRL{000000000}</displayFormat>
        <label>DCR Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Change Request Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>